--- a/soyl/Base.lproj/Main.storyboard
+++ b/soyl/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Title-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="soyl" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,69 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Budget" borderStyle="roundedRect" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kdA-y9-5LA">
+                                <rect key="frame" x="252" y="335" width="97" height="30"/>
+                                <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="13"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Nickname" borderStyle="roundedRect" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="I6i-Zq-orP">
+                                <rect key="frame" x="252" y="237" width="97" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="97" id="kgt-U2-4oG"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="13"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Email" borderStyle="roundedRect" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="u6i-kX-dmv">
+                                <rect key="frame" x="252" y="285" width="97" height="30"/>
+                                <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="13"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Account Information" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nAE-zL-Jyv">
+                                <rect key="frame" x="211" y="176" width="178" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="178" id="f6F-JZ-pZY"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oes-Mz-9B6">
+                                <rect key="frame" x="256" y="391" width="88" height="30"/>
+                                <state key="normal" title="Temp Button"/>
+                                <connections>
+                                    <action selector="tempAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="L4H-nw-a7I"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="u6i-kX-dmv" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2aG-qy-9xi"/>
+                            <constraint firstItem="I6i-Zq-orP" firstAttribute="leading" secondItem="u6i-kX-dmv" secondAttribute="leading" id="8nq-sW-bFf"/>
+                            <constraint firstItem="kdA-y9-5LA" firstAttribute="top" secondItem="u6i-kX-dmv" secondAttribute="bottom" constant="20" id="Acx-aK-br6"/>
+                            <constraint firstItem="kdA-y9-5LA" firstAttribute="centerX" secondItem="u6i-kX-dmv" secondAttribute="centerX" id="DaR-9b-fSA"/>
+                            <constraint firstItem="u6i-kX-dmv" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="GRX-g2-wSP"/>
+                            <constraint firstItem="I6i-Zq-orP" firstAttribute="top" secondItem="nAE-zL-Jyv" secondAttribute="bottom" constant="40" id="Gzl-Y3-9eX"/>
+                            <constraint firstItem="nAE-zL-Jyv" firstAttribute="centerX" secondItem="I6i-Zq-orP" secondAttribute="centerX" id="MIq-rh-hou"/>
+                            <constraint firstItem="oes-Mz-9B6" firstAttribute="top" secondItem="kdA-y9-5LA" secondAttribute="bottom" constant="26" id="NFi-5G-ThO"/>
+                            <constraint firstItem="oes-Mz-9B6" firstAttribute="centerX" secondItem="kdA-y9-5LA" secondAttribute="centerX" id="O1n-DZ-FOu"/>
+                            <constraint firstItem="I6i-Zq-orP" firstAttribute="trailing" secondItem="u6i-kX-dmv" secondAttribute="trailing" id="p1V-jY-0rB"/>
+                            <constraint firstItem="u6i-kX-dmv" firstAttribute="top" secondItem="I6i-Zq-orP" secondAttribute="bottom" constant="18" id="qPn-Hr-wfc"/>
+                            <constraint firstItem="I6i-Zq-orP" firstAttribute="leading" secondItem="kdA-y9-5LA" secondAttribute="leading" id="tjX-rW-6xl"/>
+                        </constraints>
                     </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Title" id="OdZ-7j-JJJ"/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="budget" destination="kdA-y9-5LA" id="0f1-KV-j0G"/>
+                        <outlet property="email" destination="u6i-kX-dmv" id="lcL-yl-mrm"/>
+                        <outlet property="nickname" destination="I6i-Zq-orP" id="Kd9-mg-a6P"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1192" y="309"/>
         </scene>
     </scenes>
 </document>
